--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -138,7 +138,8 @@ function MM_swapImage() { //v3.0
 											to plan for the</font><font size="6" color="#C80000">
 											</font>
 											<font color="#C80000" size="5">2013</font><font size="6" color="#C80000"> 
-											Silents Under the Stars!</font></span></span></span></TD>
+											Silents Under the Stars!<br>
+											on August 17th</font></span></span></span></TD>
 											</TR>
 											<TR>
 											  <TD colspan="2">
