--- a/index.html
+++ b/index.html
@@ -200,6 +200,41 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
+								<td align="center" id="GREEN">
+									  Click the picture to see a 
+<a href="http://www.signalscv.com/section/36/article/88676/" target="_blank">
+									  Santa Clarita Valley Signal article</a>
+									  on the brand new, beautiful fence that 
+									  surrounds Hart Park!<br>
+<a href="http://www.signalscv.com/section/36/article/88676/" target="_blank">
+<img src="images/newfence.jpg" /></a>
+								</td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+								<td align="center"><h3>
+									  Meet our newest 
+										<a href="Trading_Post/store.html">
+									  Trading Post</a> employee!<br></h3>
+<img src="Trading_Post/truly.jpg" />
+								</td>
+                                </tr>
+                                <tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
                               </tbody>
                             </table>
                                 <p style="text-indent: 20px"
@@ -229,13 +264,15 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Mar. 2<sup>nd</sup> &amp; 3<sup>rd</sup><br>
-									  10am&ndash;4pm
+                                      <td id="EventDate">Mar. 11<sup>th</sup>
                                       </td>
                                       <td id="Event">
-									  Artisan Row Arts &amp; Craft Fair 
+<a href="http://www.signalscv.com/section/36/article/88676/" target="_blank">
+									  William S. Hart Park new fence dedication!
+</a>
 									  <div id="EventDetail">
-									  Hart Hall
+									  Click the link for an SCV Signal article on the new fence. 
+									  Details on the dedication to follow.
 									  </div>
                                       </td>
                                     </tr>
@@ -244,9 +281,26 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
 									  10am&ndash;4pm
                                       </td>
                                       <td id="Event">
-									  High Desert Module Train Show 
+<a href="Event_Pages/ModularModel.jpg" rel="lightbox[train]" title="The 
+2nd Annual Wm. S. Hart park Train Show March 23 & 24. Newhall, Ca.
+This year will have food and other Vendors plus more. Admission is FREE !">
+									  High Desert Modular Model Train Show 
+</a>
 									  <div id="EventDetail">
 									  Hart Hall.
+									  </div>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate"><h4>NEW DATE: </h4> Apr. 13<sup>th</sup> &amp; 14<sup>th</sup><br>
+									  10am&ndash;4pm
+                                      </td>
+                                      <td id="Event">
+<a href="Event_Pages/artsandcrafts2013.jpg" rel="lightbox[crafts]" 
+title="Artisan Row Arts & Craft Fair">
+									  Artisan Row Arts &amp; Craft Fair </a>
+									  <div id="EventDetail">
+									  Hart Hall
 									  </div>
                                       </td>
                                     </tr>
@@ -262,14 +316,14 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Aug. TBD
+                                      <td id="EventDate"><h4>DATE PICKED!: </h4> Aug. 17<sup>th</sup>
                                       </td>
                                       <td id="Event">
 									  <a href="Event_Pages/silents.html">
 									  Silents Under the Stars
 									  </a>
 									  <div id="EventDetail">
-									  Stay tuned for details and exact date.
+									  Stay tuned for our film selection and further details.
 									  </div>
                                       </td>
                                     </tr>
