--- a/index.html
+++ b/index.html
@@ -264,15 +264,15 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Mar. 11<sup>th</sup>
+                                      <td id="EventDate">Mar. 11<sup>th</sup> at 10am<br>RSVP required
                                       </td>
                                       <td id="Event">
-<a href="http://www.signalscv.com/section/36/article/88676/" target="_blank">
+<a href="Event_Pages/FenceDedication.jpg" rel="lightbox[fence]" 
+title="Come to the event!">
 									  William S. Hart Park new fence dedication!
 </a>
 									  <div id="EventDetail">
-									  Click the link for an SCV Signal article on the new fence. 
-									  Details on the dedication to follow.
+									  Click the link for details, and come to the dedication!
 									  </div>
                                       </td>
                                     </tr>
