Fence Dedication and other April 9 changes.

--- a/index.htm
+++ b/index.htm
@@ -200,14 +200,12 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             border="0" height="24"
                                             width="313"></font></b></i></td>
                                 </tr>
-								<td align="center" id="GREEN">
-									  Click the picture to see a 
-<a href="http://www.signalscv.com/section/36/article/88676/" target="_blank">
-									  Santa Clarita Valley Signal article</a>
-									  on the brand new, beautiful fence that 
-									  surrounds Hart Park!<br>
-<a href="http://www.signalscv.com/section/36/article/88676/" target="_blank">
-<img src="images/newfence.jpg" /></a>
+								<td align="center"><h3>
+Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</h3>
+<a href="http://ht.ly/iuY3N" target="_blank">
+<img class="centered" src="images/iStockPhotos/gramo.png" /></a>
+<p>Opens a new window, where you can hear and read about the recording.<p>
+<i>Thanks to our friends at SCVHistory.com for use of this!</i>
 								</td>
                                 </tr>
                                 <tr>
@@ -263,21 +261,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Mar. 23<sup>rd</sup> &amp; 24<sup>th</sup><br>
-									  10am&ndash;4pm
-                                      </td>
-                                      <td id="Event">
-<a href="Event_Pages/ModularModel.jpg" rel="lightbox[train]" title="The 
-2nd Annual Wm. S. Hart park Train Show March 23 & 24. Newhall, Ca.
-This year will have food and other Vendors plus more. Admission is FREE !">
-									  High Desert Modular Model Train Show 
-</a>
-									  <div id="EventDetail">
-									  Hart Hall.
-									  </div>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate"><h4>NEW DATE: </h4> Apr. 13<sup>th</sup> &amp; 14<sup>th</sup><br>
 									  10am&ndash;4pm
@@ -365,35 +348,62 @@ title="Artisan Row Arts & Craft Fair">
                                             color="#FFCC00" size="6"><img
 src="images/baseline_v2.gif" border="0" height="24" width="546"></font></b></i></p>
                                   </b></i></div>
-<h3>Click on the thumbnails below to see 2 friends of the Friends of Hart Park.  They are missed.</h3><br>
-<h2>Harry Carey, Jr.</h2><h3> at <a href="http://parks.lacounty.gov/wps/portal/dpr/Parks/Tesoro_Adobe_Historic_Park" target="_blank">
-Tesoro Adobe Park</a></h3><br>
-<a href="images/HarryCarey/000_0575.jpg" rel="lightbox[harrycarey]" title="Harry Carey, Jr.">
-<img src="images/HarryCarey/thumbs/000_0575.jpg" alt="Harry Carey, Jr."/></a>
-<a href="images/HarryCarey/000_0587.jpg" rel="lightbox[harrycarey]" title="Harry Carey, Jr.">
-<img src="images/HarryCarey/thumbs/000_0587.jpg" alt="Harry Carey, Jr."/></a>
-<a href="images/HarryCarey/000_0590.jpg" rel="lightbox[harrycarey]" title="Harry Carey, Jr.">
-<img src="images/HarryCarey/thumbs/000_0590.jpg" alt="Harry Carey, Jr."/></a>
-<a href="images/HarryCarey/WithLaureneWesteAndTyHardin.jpg" rel="lightbox[harrycarey]" title="Harry Carey, Jr.">
-<img src="images/HarryCarey/thumbs/WithLaureneWesteAndTyHardin.jpg" alt="Harry Carey, Jr."/></a>
-<h2>Huell Howser at Hart Park</h2><br>
-<a href="images/HuellHowser/000_1440.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1440.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1441.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1441.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1442.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1442.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1443.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1443.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1445.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1445.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1446.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1446.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1447.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1447.jpg" alt="Huell Howser"/></a>
-<a href="images/HuellHowser/000_1450.jpg" rel="lightbox[huellhowser]" title="Huell Howser">
-<img src="images/HuellHowser/thumbs/000_1450.jpg" alt="Huell Howser"/></a>
-<br><br>
+<p> <h2>The New Fence....  Unveiled!</h2>
+<h4>by Museum Administrator, Rachel Barnes</h4></p>
+<div id="main">
+<p class="lots">On Monday, March 11, 2013, dignitaries and friends 
+came out to Hart Park for the official dedication of the 
+new fence. </p>
+<p class="lots">A wonderful spread of breakfast snacks awaited guests 
+in Hart Hall before and after presentations by Russ 
+Guiney, Director of LA County Department of Parks 
+and Recreation, Morris Thomas, District Director for 
+Congressman Howard McKeon, Laurene Weste, 
+Mayor Pro-Tem for the City of Santa Clarita and the 
+President of the Friends of Hart Park, and Dr. Jane Pisano, Director and President of the Natural History 
+Museum. </p>
+<p class="lots">The keynote address was provided by none other than 
+LA County Supervisor Michael D. Antonovich, whose 
+generous financial support made this new fence possible. </p>
+<p class="lots">And following the ribbon cutting ceremony, in which 
+Supervisor Antonovich performed the honors, guests 
+could stop by and enjoy a special display of Bill Hart's 
+tack set up in Hart Hall. The incredible pieces, including a bridle with silver and turquois ornamentation, 
+had recently received professional and much-needed 
+conservation treatment. Conservation treatment that 
+was funded by Supervisor Antonovich.</p>
+<p class="lots">And through it all, a beautiful day, with a bright sun 
+shining down on the brand new fence. Many thanks to 
+everyone who made this fence possible! </p><br>
+<h3>Click on the thumbnails to see images of the event</h3>
+<h4>photos courtesy of Friends of Hart Park director, Sheila Miller</h4>
+</div>
+<div id="sidebar">
+<br>
+<a href="images/fencededication/015.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/015.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/022.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/022.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/037.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/037.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/056.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/056.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/060.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/060.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/061.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/061.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/062.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/062.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/078.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/078.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/080.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/080.JPG" alt="Fence Dedication"/></a>
+<a href="images/fencededication/088.JPG" rel="lightbox[fence]" titile="Fence Dedication">
+<img class="centered" src="images/fencededication/thumbs/088.JPG" alt="Fence Dedication"/></a>
+<br>
+</div>
+<div id="footer">
+</div>
                         </tr>
                       </tbody>
                     </table>
