Upgraded lightbox to one that works with IE9 and IE10.

--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -9,12 +9,12 @@
       wow calendar, powwow calendar, powwows , pow wows , indians ,
       dancing, singing, music, crafts, beadwork, drums, drummers, arts">
     <link rel="stylesheet" type="text/css" href="../theme/WSH.css">
-    <link rel="stylesheet" href="../css/lightbox.css" type="text/css"
-      media="screen">
+    <link rel="stylesheet" href="../css/lightbox.css">
 	<link rel="shortcut icon" href="../images/fohp.ico">
     <title>Friends of Hart Park and Museum</title>
     <script type="text/javascript" src="../js/prototype.js"></script>
     <script type="text/javascript" src="../js/scriptaculous.js?load=effects,builder"></script>
+    <script type="text/javascript" src="../js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="../js/lightbox.js"></script>
     <script language="JavaScript" type="text/JavaScript">
 <!--
