Update to include Silents 2013 details, but no PayPal yet.

--- a/Trading_Post/store.html
+++ b/Trading_Post/store.html
@@ -172,7 +172,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                     <p style="margin-top: 7px; margin-bottom: 5px"
                       align="center"> <font size="4"> <img style="
                           solid;" alt="Happy Holidays!"
-                          src="Jack.jpg"
+                          src="TradingPost.jpg"
                           align="right"></font></p>
 				<h4>
                     <p>
