--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate"><h4>DATE PICKED!: </h4> Aug. 17<sup>th</sup>
+                                      <td id="EventDate"><h4>DATE &amp; MOVIES PICKED!: </h4> Aug. 17<sup>th</sup>
                                       </td>
                                       <td id="Event">
 									  <a href="Event_Pages/silents.html">
 									  Silents Under the Stars
 									  </a>
 									  <div id="EventDetail">
-									  Stay tuned for our film selection and further details.
+									  Click for all the latest details.  Tickets sold on-line soon!
 									  </div>
                                       </td>
                                     </tr>
