Updated Will Call location for Silents.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<font size="4">Or to buy tickets over the phone, or for 
+											<font size="4">To buy tickets over the phone, or for 
 											additional info, Call (661) 222&ndash;9542</font></p>
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span style="letter-spacing: normal">
@@ -166,7 +166,8 @@ some tough decisions about returning to the family &quot;business&quot;!
 <p align="center">
 We will also be showing another classic silent film shot in the Bay area. It stars one of Bill's 
 more celebrated western contemporaries, Broncho Billy Anderson.  Ride the trail with him in the 1913 
-western short &quot;The Making of Broncho Billy&quot;
+western short 
+<p align="center">&quot;The Making of Broncho Billy&quot;
 										</td>
 													</tr>
 													<tr>
@@ -307,8 +308,8 @@ western short &quot;The Making of Broncho Billy&quot;
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
-												Proceed to Will Call at the
-												<a href="../Trading_Post/store.html">Trading Post gift shop</a>
+												Proceed to Will Call at 
+												<a href="../Hart_Hall/hart_hall.html">Hart Hall</a>
 												to check in and pick up your ticket.
 												</font></span></p>
 												</span>
