--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -8,6 +8,7 @@
 <meta name="keywords" CONTENT="Native American, American Indian, pow wow calendar, 
 powwow calendar, powwows , pow wows , indians , dancing, singing, music, crafts, 
 beadwork, drums, drummers, arts">
+	<link rel="shortcut icon" href="../images/fohp.ico">
 <LINK href="../theme/WSH.css" rel="stylesheet" type="text/css">
 <TITLE>Friends of Hart Park and Museum</TITLE>
 <script language="JavaScript" type="text/JavaScript">
@@ -115,42 +116,94 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 										<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px">
 										<span class="Apple-style-span" style="font-family: Copperplate Gothic Bold; text-align: -webkit-center">
-										<font size="5">Thank you all for coming 
-										to the 2012</font></span></span></p>
+										<font size="5">The Friends Of Hart Park 
+										<br>
+										and the<br>
+&nbsp;William S. Hart Park &amp; Museum present:</font></span></span></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
+											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											<p align="center">
-											<span class="Apple-style-span">
-											<span style="letter-spacing: normal">
-											<font face="Copperplate Gothic Bold" size="4" color="#770000">
-											A wonderful time was had by all, and 
-											we thank you for helping to make 
-											this one of the best events ever!</font></span></span></TD>
+											Come see the new look of the park!  Join us on
+											<h3 align="center">
+											Saturday, August 17<sup>th</sup>, 
+											2013 6pm</h3></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
+											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
+											<font size="4">Check back here to buy tickets on-line soon! </font>
+
+											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
+
+											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+											<font size="4">To buy tickets over the phone, or for 
+											additional info, Call (661) 222&ndash;9542</font></p>
+											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span style="letter-spacing: normal">
-											<span style="font-family: Copperplate Gothic Bold">
-											<font color="#C80000" size="5">
-											Please check back here as we begin 
-											to plan for the</font><font size="6" color="#C80000">
-											</font>
-											<font color="#C80000" size="5">2013</font><font size="6" color="#C80000"> 
-											Silents Under the Stars!<br>
-											on August 17th</font></span></span></span></TD>
+											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
+											<font size="4">Tickets are non-Refundable</font></span></span></p>
+											</TD>
 											</TR>
 											<TR>
 											  <TD colspan="2">
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-											&nbsp;</td>
+											<p>
+											<B class="EVNTC">Just Announced!</B>
+<p>
+<h2 align="center">
+We are very pleased to announce that we're showing a hard-to-find William S. Hart film from 1920 called 
+<p><h1 align="center"><b><i>&quot;The Cradle of Courage&quot;</i></b>!</h1><p>
+<center><img src="../images/HartAsWWIsoldier.jpg" /></center>
+</h2>
+<p align="center">
+Hart plays a WWI vet, returning home to San Francisco from the battlefields of France, and facing 
+some tough decisions about returning to the family &quot;business&quot;!
+<p align="center">
+We will also be showing another classic silent film shot in the Bay area. It stars one of Bill's 
+more celebrated western contemporaries, Broncho Billy Anderson.  Ride the trail with him in the 1913 
+western short 
+<p align="center">&quot;The Making of Broncho Billy&quot;
+										</td>
 													</tr>
 													<tr>
 														<td colspan="2">
-											&nbsp;</td>
+											<B class="EVNTC">What else?</B><p align="center" style="margin-top: 7px; margin-bottom: 5px">
+<p align="center">
+										Together with our double feature, our famous silent auction and 
+										a lip-smacking dinner &quot;Under the 
+										Stars&quot; come enjoy the western and bluegrass stylings of the
+										<p>
+											<table border="0" width="100%">
+												<tr>
+													<td>
+													<p align="center">
+													<img alt="The All Digital String Band"
+														src="../images/AllDigitalStringBandalpha.png">
+													</img>
+													</p>
+													</td>
+												</tr>
+												<tr>
+													<td>
+												<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+										We're also pleased to announce short talks on the films by
+										our Projectionist and Friend, Film Historian and 
+										Preservationist David Shepard.
+										</p>
+													</td>
+												</tr>
+											</table>
+												<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+										<span class="Apple-style-span">
+										<span style="letter-spacing: normal">
+										<font face="Copperplate Gothic Bold" size="6" color="#770000">
+										also featuring:<br></font></span></span></p>
+														</td>
 													</tr>
 													<tr>
 														<td rowspan="2">
@@ -159,7 +212,8 @@ function MM_swapImage() { //v3.0
 														<td>
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												Evening Tours &amp; Patio Seating </font></span></td>
+												Evening Tours &amp; Patio Seating -- 
+												6pm</font></span></td>
 													</tr>
 													<tr>
 														<td rowspan="3">
@@ -183,7 +237,7 @@ function MM_swapImage() { //v3.0
 												<p align="left">
 												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												BBQ Dinner from Rattler&#8217;s</font></span></td>
+												BBQ Dinner from Rattler&#8217;s -- 7pm</font></span></td>
 													</tr>
 												</table>
 											  </TD>
@@ -254,8 +308,10 @@ function MM_swapImage() { //v3.0
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
-												Proceeds from the event help our 
-												park and its animals!</font></span></p>
+												Proceed to Will Call at 
+												<a href="../Hart_Hall/hart_hall.html">Hart Hall</a>
+												to check in and pick up your ticket.
+												</font></span></p>
 												</span>
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span class="Apple-style-span">
@@ -271,7 +327,10 @@ function MM_swapImage() { //v3.0
 											<p align="center">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<img border="0" src="silents/david.jpg" width="259" height="320"></TD>
+											<img alt="David Shepard" border="0" src="silents/david.jpg" width="259" height="320">
+											<h3 align=center> Featuring film introductions by our friend, projectionist
+											and film preservationist, David Shepard</h3>
+											</TD>
 										</TR>
 									</TBODY>
 								</TABLE>
