Updated the main page to hilight the silents tickets, and use Vince's cool image.

--- a/index.htm
+++ b/index.htm
@@ -264,7 +264,7 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate"><h4>DATE &amp; MOVIES PICKED!: </h4> Aug. 17<sup>th</sup>
+                                      <td id="EventDate"><h4>TICKETS NOW AVAILABLE FOR PURCHASE!: </h4> Aug. 17<sup>th</sup>
                                       </td>
                                       <td id="Event">
 									  <a href="Event_Pages/silents.html">
@@ -291,10 +291,7 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                       <td id="EventDate">Oct. 13<sup>th</sup>
                                       </td>
                                       <td id="Event">
-									  Bow Wows &amp; Meows Pet Fair 
-                                      </td>
-                                    </tr>
-                                    <tr>
+									  Bow Wows &amp; Meows Pet Fair </td> </tr> <tr>
                                       <td id="EventDate">Nov. 2<sup>nd</sup> &amp; 3<sup>rd</sup>
                                       </td>
                                       <td id="Event">
@@ -323,82 +320,22 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+<h3>Click <a href="Event_Pages/silents.html">here</a>
+to buy tickets to this year's
+<a href="Event_Pages/silents.html">
+<h2><b>Silents Under The Stars</b><h2>
+</a>
+<a href="Event_Pages/silents.html">
+<center><img src="Event_Pages/Silents2013.jpg"/></center>
+</a>
+<p>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
 <h3>Click <a href="Event_Pages/cowboyfest.html">here</a> 
 to see pictures from the Hart Park events at the </h3>
 <a href="Event_Pages/cowboyfest.html"><img src="Event_Pages/RidersInTheSky.jpg"/></a>
 <h2>20<sup>th</sup> Annual Cowboy Festival</h2>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<a href="http://scvtv.com/html/hartparkdedication031113.html" target="_blank">
-<img src="images/fencededication/fence.jpg" /></a>
-<p> <blockquote><i>Watch a 
-<a href="http://scvtv.com/html/hartparkdedication031113.html" target="_blank">video</a>
-of the 
-<a href="http://scvtv.com/html/hartparkdedication031113.html" target="_blank">fence dedication</a> 
-from our friends at SCVTV! <small>(opens a new window)</small></i></blockquote>
-<p> <h2>The New Fence....  Unveiled!</h2>
-<h4>by Museum Administrator, Rachel Barnes</h4></p>
-<div id="main">
-<p class="lots">On Monday, March 11, 2013, dignitaries and friends 
-came out to Hart Park for the official dedication of the 
-new fence. </p>
-<p class="lots">A wonderful spread of breakfast snacks awaited guests 
-in Hart Hall before and after presentations by Russ 
-Guiney, Director of LA County Department of Parks 
-and Recreation, Morris Thomas, District Director for 
-Congressman Howard McKeon, Laurene Weste, 
-Mayor Pro-Tem for the City of Santa Clarita and the 
-President of the Friends of Hart Park, and Dr. Jane Pisano, Director and President of the Natural History 
-Museum. </p>
-<p class="lots">The keynote address was provided by none other than 
-LA County Supervisor Michael D. Antonovich, whose 
-generous financial support made this new fence possible. </p>
-<p class="lots">And following the ribbon cutting ceremony, in which 
-Supervisor Antonovich performed the honors, guests 
-could stop by and enjoy a special display of Bill Hart's 
-tack set up in Hart Hall. The incredible pieces, including a bridle with silver and turquois ornamentation, 
-had recently received professional and much-needed 
-conservation treatment. Conservation treatment that 
-was funded by Supervisor Antonovich.</p>
-<p class="lots">And through it all, a beautiful day, with a bright sun 
-shining down on the brand new fence. Many thanks to 
-everyone who made this fence possible! </p><br>
-</div>
-<div id="sidebar">
-<br>
-<a href="images/fencededication/00.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/00.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/01.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/01.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/02.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/02.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/03.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/03.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/04.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/04.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/05.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/05.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/06.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/06.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/07.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/07.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/08.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/08.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/09.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/09.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/10.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/10.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/11.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/11.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<a href="images/fencededication/12.jpg" rel="lightbox[fence]" title="Fence Dedication photo courtesy County of Los Angeles">
-<img class="centered" src="images/fencededication/thumbs/12.jpg" alt="Fence Dedication photo courtesy County of Los Angeles"/></a>
-<br>
-</div>
-<div id="footer">
-<h3>Click on the thumbnails to see images of the event</h3>
-<h4>photos courtesy of The County of Los Angeles</h4>
-</div>
                         </tr>
                       </tbody>
                     </table>
