--- a/Trading_Post/store.html
+++ b/Trading_Post/store.html
@@ -163,7 +163,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
 					</div>
 <div id="leftthird">
 <h3>Shop On-line!</h3>
-<p>Wm. S. Hart merchandise is now available on-line!  Just following these links the OutWest Store
+<p>Wm. S. Hart merchandise is now available on-line!  Just follow these links to the OutWest Store
 <small><small><i>(each link opens a new browser window)</i></small></small> for 
 <a target="_blank" href="http://www.outwestmktg.com/store/index.cfm/william-s-hart-park-collection/cid-39">
 The Wm. S. Hart Collection</a>:</p>
