--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -285,7 +285,7 @@ western short
 												<p align="center" style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 												<p style="margin-top: 0; margin-bottom: 6px" align="left">
 												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-												<font face="Arial" size="2">I-5 
+												<font face="Arial" size="2">From L.A. area, take I-5 
 												North, Golden State Freeway, to 
 												I-14 North, Antelope Valley 
 												Freeway &nbsp;</font></span></p>
@@ -298,7 +298,7 @@ western short
 												<p style="margin-top: 0; margin-bottom: 6px" align="left">
 												<span style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<font face="Arial" size="2">Turn 
-												left on Newhall Avenue (the old 
+												right (North) on Newhall Avenue (the old 
 												San Fernando Road). </font>
 												</span></p>
 												<p style="margin-top: 0; margin-bottom: 6px" align="left">
