--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                       <td id="EventDate">Dec. 7<sup>th</sup>
                                       </td>
                                       <td id="Event">
+<a href="Event_Pages/CowboysCarols2013.jpg" rel="lightbox[cowboyscarols]" title="Cowboys and Carols 2013">
 									  Cowboys &amp; Carols
+</a>
 									  <div id="EventDetail">
 									  and William S. Hart's Birthday celebration!
 									  </div>
