August 2013 updates to Pow Wow

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -213,7 +213,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Arena Director
                                           </td>
                                           <td id="PowWowPerson">
-                                                Victor Chavez/Chumash
+                                                Victor Chavez/Din&eacute;
                                           </td>
                                         </tr>
                                         <tr>
@@ -238,7 +238,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Shigo Yellowhorse/Din&eacute;
                                           </td>
                                         </tr>
                                         <tr>
@@ -246,7 +246,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headwoman
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Samantha Moreno/Lakota
                                           </td>
                                         </tr>
                                         <tr>
@@ -255,7 +255,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Michael Jimenez/Apache/Huichol
 										  </td>
                                         </tr>
                                         <tr>
@@ -263,7 +263,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headgirl
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Nina Moreno/Lakota/Apache
                                           </td>
                                         </tr>
                                         <tr>
@@ -287,16 +287,15 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                Hale &amp; Company
+                                                Big Medicine
                                           </td>
                                         </tr>
                                       </tbody>
                                     </table>
                                   </td>
-                                  <td width="406"> <img
-                                      src="2009PowWow/background.JPG"
-                                      align="right" border="0"
-                                      height="600" width="400"></td>
+                                  <td width="406"> 
+								  	<img src="powwow.png" alt="Pow Wow" title="image courtesy Ken Lubas"/>
+                                  </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -337,8 +336,8 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                         </li>
                                       </b>
                                     </ul>
-                                    <p style="margin-top: 0"><b> <font
-                                          color="#800000" size="5">Note:</font></b></p>
+                                    <b> <font
+                                          color="#800000" size="5">Note:</font></b>
                                     <div class="EVNTS" align="left">
                                       <ul>
                                         <li>
