Fixed some mistakes in the event details.

--- a/index.htm
+++ b/index.htm
@@ -271,7 +271,7 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
 									  Silents Under the Stars
 									  </a>
 									  <div id="EventDetail">
-									  Click for all the latest details.  Tickets sold on-line soon!
+									  Click for all the latest details.  Tickets sold on-line and by phone!
 									  </div>
                                       </td>
                                     </tr>
@@ -282,9 +282,6 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
 									  <a href="Event_Pages/powwow.html">
 									  20<sup>th</sup> Annual Native American Pow Wow
 									  </a>
-									  <div id="EventDetail">
-									  Stay tuned for further details
-									  </div>
                                       </td>
                                     </tr>
                                     <tr>
@@ -312,9 +309,6 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
 <a href="Event_Pages/CowboysCarols2013.jpg" rel="lightbox[cowboyscarols]" title="Cowboys and Carols 2013">
 									  Cowboys &amp; Carols
 </a>
-									  <div id="EventDetail">
-									  and William S. Hart's Birthday celebration!
-									  </div>
                                       </td>
                                     </tr>
                                   </tbody>
