Fixed typos per Nadiya.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -238,7 +238,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Shigo Yellowhorse/Din&eacute;
+                                                Shiigo Yellowhorse/Din&eacute;
                                           </td>
                                         </tr>
                                         <tr>
@@ -410,9 +410,9 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                       262px; height: 275px" align="left">
                                       <dl>
                                         <b> 
-                                          <dt>Marylina &mdash; vendor information</dt>
+                                          <dt>Marylina &mdash; founder</dt>
                                           <dd>(661) 255-9295</dd>
-										  <dt>Nadiya Littlewarrior&mdash; general information</dt>
+										  <dt>Nadiya Littlewarrior&mdash; information</dt>
                                           <dd>(661) 298-3014
                                             kiwenkikwe@yahoo.com</dd>
                                         </b>
